--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <title>Whack-A-Mole</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="../icon/img_js.png">
+    <link rel="icon"
+        href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/160/emojidex/112/hammer_1f528.png">
 </head>
 
 <body>
