--- a/index.html
+++ b/index.html
@@ -61,15 +61,15 @@
                             <img src="css/cog.svg" alt="⚙">
                         </div> -->
                         <div class="velocity-level">
-                            <img src="css/velocity-mole.svg" alt="⚙">
+                            <img src="css/velocity-mole.svg" alt="velocity">
                             <span class="normal">2</span>
                         </div>
                         <div class="time-level">
-                            <img src="css/timer.svg" alt="⚙">
-                            <span class="normal">2</span>
+                            <img src="css/timer.svg" alt="timer">
+                            <span class="normal">10</span>
                         </div>
                         <div class="volume-level">
-                            <img src="css/volume.svg" alt="⚙">
+                            <img src="css/volume.svg" alt="volume">
                             <span class="hard"></span>
                         </div>
                     </div>
