New Hammer added

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Whack-A-Mole</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon"
-        href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/160/emojidex/112/hammer_1f528.png">
+        href="./css/hammer2.png">
     <meta httpEquiv="Content-Type" content="text/html"/>
     <meta charSet="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
