Retry Button Added

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
             <h2>GAME OVER</h2>
             <h3>Enter your name!</h3><br>
             <input type="text">
+            <h3 class="retry">Retry?</h3><br>
         </div>
     
         <div class="scoreboard">
