Front Screen Added

--- a/index.html
+++ b/index.html
@@ -12,12 +12,25 @@
 </head>
 
 <body>
+    
+    <form class="modal">
+    <div class="title"><span>Welcome to</span><h1>Wack-A-Mole</h1></div>
+    <div class="select">select difficulty:</div>
+    <div class="buttons">
+        <button class="e">Easy</button>
+        <button class="m">Medium</button>
+        <button class="h">Hard</button>
+    </div>
+    <div></div>
+    <div></div>
+    <div></div>
+    </form>
+
     <div class="container">
         <div class="view">
-            <div class="title">
+            <!-- <div class="title">
                 <h1>Wack-A-Mole</h1>
-            </div>
-
+            </div> -->
             <main>
                 <div class="hole">
                     <img src="css/hole.png">
@@ -57,22 +70,23 @@
                 </div>
                 <span class="side-controls">
                     <div class="side-controls--container">
-                        <!-- <div class="settings">
-                            <img src="css/cog.svg" alt="⚙">
-                        </div> -->
                         <div class="velocity-level">
                             <img src="css/velocity-mole.svg" alt="velocity">
-                            <span class="normal">2</span>
+                            <span class="">2</span>
                         </div>
                         <div class="time-level">
                             <img src="css/timer.svg" alt="timer">
-                            <span class="normal">10</span>
+                            <span class="">10</span>
                         </div>
                         <div class="volume-level">
                             <img src="css/volume.svg" alt="volume">
                             <span class="hard"></span>
                         </div>
                     </div>
+                    <a href="https://www.mitri-dev.xyz/" class="side-controls--container-2">
+                        <img src="./css/icon.svg" alt="mitri-dvp-icon" srcset="">
+                        <p>mitri.dvp</p>
+                    </a>
                 </span>
             </main>
             <div class="controls">
@@ -104,6 +118,11 @@
             </tbody>
         </table>
 
+    <a href="https://www.mitri-dev.xyz/" class="powered-by">
+      <img src="./css/icon.svg" alt="mitri-dvp-icon" srcset="">
+      <p>mitri.dvp</p>
+    </a>
+        
     <script src="js/script.js"></script>
 </body>
 
