--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <head>
     <title>Whack-A-Mole</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon"
-        href="./css/hammer2.png">
+    <link rel="icon" href="./css/hammer2.png">
     <meta httpEquiv="Content-Type" content="text/html"/>
     <meta charSet="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -118,7 +117,7 @@
             </tbody>
         </table>
 
-    <a href="https://www.mitri-dev.xyz/" class="powered-by">
+    <a href="https://www.mitri-dvp.com/" class="powered-by">
       <img src="./css/icon.svg" alt="mitri-dvp-icon" srcset="">
       <p>mitri.dvp</p>
     </a>
